# xgdl

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
src/xgdl/: __init__.py  eval.py  get_data.py
src/xgdl/backbones/: __init__.py
src/xgdl/baselines/: base.py  test_method.py
src/xgdl/baselines/inherent/: asap.py  dir.py  lri_bern.py  vgib.py
src/xgdl/baselines/posthoc/: __init__.py  grad.py  orphicx.py
src/xgdl/configs/: actstrack.yml  dgcnn_actstrack.yml  dgcnn_plbind.yml  egnn_tau3mu.yml  plbind.yml  pointtrans_actstrack.yml  pointtrans_plbind.yml  synmol.yml  tau3mu.yml
src/xgdl/datasets/: tau3mu.py
src/xgdl/result/: add-post_inherent.py
src/xgdl/utils/: __init__.py  info_utils.py
xgdl/: example.py  get_data.py  get_model.py  nni_finetune.py  template.py  trainer.py
xgdl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xgdl/backbones/: dgcnn.py  egnn.py  model_utils.py  pointtrans.py
xgdl/baselines/: base.py  new_shapley.py
xgdl/baselines/inherent/: ciga.py  lri_gaussian.py
xgdl/baselines/posthoc/: gnnexplainer.py  gnnlrp.py  pgmexplainer.py  shapley.py
xgdl/configs/: actstrack.yml  dgcnn_synmol.yml  dgcnn_tau3mu.yml  egnn_actstrack.yml  egnn_plbind.yml  egnn_synmol.yml  plbind.yml  pointtrans_synmol.yml  pointtrans_tau3mu.yml  synmol.yml  tau3mu.yml
xgdl/datasets/: __init__.py  actstrack.py  plbind.py  synmol.py  tau3mu.py
xgdl/exps/: ensemble.py  model_trustworthy.py  test_sensitivity.py  test_uncertainty.py  vary_generalization.py  vary_reliability.py
xgdl/log/: rename_files.py
xgdl/result/: statistics.py
xgdl/utils/: draw_figs.py  logger.py  model_utils.py  send_email.py  url.py  visualize_samples.py
