[project]
name = "xgdl"
version = "0.0.4"
authors = [
  { name = "Jiajun Zhu", email = "zhuconv@gmail.com" },
  { name = "Siqi Miao", email = "siqim311@gamil.com" },
]
dependencies = [
    "Bio",
    "joblib",
    "pandas",
    "Pint",
    "PyYAML",
    "rdkit",
    "rdkit_pypi",
    "scikit_learn",
    "scipy",
    "tqdm",
    "tensorboard",
    "jupyter",
    "pgmpy",
    "torchmetrics",
]
description = "Explainability Library with Geometric Deep Learning for Scientific Tasks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Graph-COM/xgdl"
"Bug Tracker" = "https://github.com/Graph-COM/xgdl/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"xgdl" = ["configs/*.yml"]